Fixed infinite loop and creating different scaled objects

--- a/InfiniteSlasher.uproject
+++ b/InfiniteSlasher.uproject
@@ -25,9 +25,8 @@
 			]
 		},
 		{
-			"Name": "VehicleSystemPlugin",
-			"Enabled": true,
-			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/9577489aa3264ecf94142dad1bc2956c"
+			"Name": "MetaHuman",
+			"Enabled": false
 		}
 	]
 }
